--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -94,6 +94,7 @@ es:
   search placeholder: "Buscar..."
   search: "Buscar"
   book: "Libro"
+  filter book: "Filtrar Libros…"
   try the beta: "Utilizar la Versión Beta"
   welcome to the beta: "¡Bienvenidos al nuevo YouVersion.com!"
   selected: "Seleccionado"
@@ -156,6 +157,7 @@ es:
     see my likes: "Ver todos los marcado \"Me Gusta\""
     successfully deleted: "Nota Eliminada"
   ref:
+    loading secondary: "Cargando Referencias en Versión Secundaria..."
     clear verses: "Deseleccionar Versículos"
     choose book and chapter: "Eligir Libro + Capítulo"
     choose version: "Eligir Versión"
@@ -537,7 +539,7 @@ es:
     card exp date: "Fecha de Expiración (MMYY)"
     receipt: "Envíeme por correo electrónico una copia de mi recibo"
     preview: "Vista Previa de la Donación "
-    header copy: "Juntos, podemos convertirnos en la generación más \"Involucrada en la Biblia\" de la historia. Su respaldo económico significa que las personas podrán abrir la Palabra de Dios en más plataformas, en más idiomas, en más versiones y en más países que nunca antes. Por favor complete el formulario abajo para realizar su donación. Se solicitará información de forma de pago en la siguiente pantalla.  Aceptamos Visa o Mastercard."
+    header copy: "Juntos, podemos convertirnos en la generación más \"Involucrada en la Biblia\" de la historia. Su respaldo económico significa que las personas podrán abrir la Palabra de Dios en más plataformas, en más idiomas, en más versiones y en más países que nunca antes. Por favor complete el formulario abajo para realizar su donación. Se solicitará información de forma de pago en la siguiente pantalla."
     header confirm copy: "Juntos, podemos convertirnos en la generación más \"Involucrada en la Biblia\" de la historia. Su respaldo económico significa que las personas podran abrir la Palabra de Dios en más plataformas, en más lenguajes. en más versiones y en más países que nunca antes. Presione el botón de \"Donar Ahora\" para realizar su donación."
     donate now button: "Donar ahora  (EEUU)"
     email header: "YouVersion, un ministerio de LifeChurch.tv, ha recibido su donación. Ningún producto o servicio fue provisto a cambio de dicha donación, a excepción de beneficios religiosos intangibles. Por favor contactenos via giving@lifechurch.tv con sus preguntas."
@@ -629,20 +631,23 @@ es:
       our action: "Hemos sido notificados acerca de esto y procederemos a solucionarlo tan pronto como sea posible."
   shared:
     menu_settings:
-      title: "Su Configuración"
+      title: "Configuración del Lector"
       close: "Cerrar"
       font: "Tipo de Letra:"
       font1: "Helvetica"
       font2: "Georgia"
       font3: "Baskerville"
       font4: "Verdana"
-      font size: "Tamaño:"
+      font size: "Tamaño de Letra"
       small: "Pequeño"
       medium: "Mediano"
       large: "Grande"
-      highlights: "Resaltados:"
+      highlights: "Resaltados"
       'on': "Activado"
       'off': "Desactivado"
+      extras: "Extras:"
+      translation notes: "Notas"
+      cross references: "Referencias Cruzadas"
   app errors:
     404 explanation: "Desafortunadamente, no hemos encontrado una página para <em>%{requested_path}</em>. Si crees que esta página debería existir, por favor, permita que nuestro <a href='%{support_url}'>equipo de apoyo </a> sepa, o regresa a la <a href='%{reader_path}'>reader</a>."
     404 message: "Lo sentimos, la página que usted está buscando no puede ser hallada. "
@@ -650,6 +655,8 @@ es:
     408 explanation: "Hemos sido alertados y resolveremos cualquier problema persistente tan pronto como sea posible.  ¡Veamos si podemos llevarlo de nuevo a su Plan de Lectura!"
     try again: "Intente Nuevamente"
   versions:
+    filter: "Filtrar Versiones..."
+    courtesy of: "%{abbreviation} presentada por %{publisher}"
     learn more: "Aprenda más"
     index title: "Versiones Disponibles"
     publisher widget title: "Editor"
