--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -14,7 +14,7 @@ pt-PT:
   created ago: "Criado há %{time_ago} atrás"
   copy: "Copiar"
   copy confirmed: "Copiado!"
-  new note: "Nota Nova"
+  new note: "Criar Nota"
   twitter: "Twitter"
   facebook: "Facebook"
   share success: "A sua mensagem foi partilhada."
@@ -35,10 +35,10 @@ pt-PT:
   user follows: "%{user} está a segui-lo"
   user does not follow: "%{user} não o segue."
   no following found self: "Ainda não está a seguir ninguém. Visite a página <a href='%{link}'>Encontrar Amigos</a> e encontre alguns amigos!"
-  no followers found self: "Ainda não tem seguidores. Visite a página <a href='%{link}'>Encontrar Amigos</a> e encontre alguns amigos!!"
+  no followers found self: "Ainda não tem seguidores. Visite a página <a href='%{link}'>Encontrar Amigos</a> e encontre alguns amigos!"
   no followers found other: "Ainda ninguém segue %{username}."
   no following found other: "%{username} ainda não segue ninguém."
-  no likes found: "%{username} ainda não fez gosto a nada."
+  no likes found: "%{username} ainda não fez Gosto a nada."
   no notes found: "%{username} não tem notas criadas."
   no recent activity: "%{username} não tem atividade recente."
   no badges found yourself: "Ainda não ganhou nenhuma medalha."
@@ -48,7 +48,7 @@ pt-PT:
   following: "Seguindo"
   highlight: "Destaque"
   bookmark: "Marcador"
-  earned badge date: "Ganha por %{username} há %{ago} dias"
+  earned badge date: "Ganha por %{username} há %{ago}"
   badges title: "Medalhas"
   currently selected: "Atualmente Selecionado: "
   read reference: "Leia %{reference}"
@@ -59,7 +59,7 @@ pt-PT:
   my connections: "Contas Associadas"
   my devices: "Dispositivos Associados"
   language name: "Português (Portugal)"
-  sign up: "Autenticar-se"
+  sign up: "Registe-se"
   have an account: "Já possui uma conta?"
   no account: "Não possui uma conta?"
   successful sign-in: "Autenticado como %{user}!"
@@ -71,7 +71,7 @@ pt-PT:
   username or email prompt: "Utilizador (ou email)"
   password prompt: "Palavra-Passe:"
   sign in: "Autenticar"
-  sign in to youversion: "Registe-se no YouVersion"
+  sign in to youversion: "Autenticar em YouVersion"
   remove: "Eliminar"
   confirm danger: "Sim, tenho a certeza"
   registered ago: "Registado há %{time_ago}"
@@ -120,10 +120,10 @@ pt-PT:
   160 character limit: "160 caracteres ou menos"
   recent versions: "Usado Recentemente"
   likes:
-    my likes: "Os meus Gostos"
-    all likes: "Todos os Gostos"
-    none exist blurb: "Desculpe, ninguém fez \"gosto\" a isto!"
-    likes: "Gostos"
+    my likes: "Os meus Gosto´s"
+    all likes: "Todos os Gosto´s"
+    none exist blurb: "Desculpe, ninguém fez Gosto a isto!"
+    likes: "Gosto´s"
     like button text: "Gosto"
     unlike button text: "Remover Gosto"
   notes:
@@ -154,7 +154,7 @@ pt-PT:
     pop out: "Saltar fora"
     notes i like: "Notas que Gosto"
     none found: "Nenhuma nota encontrada..."
-    see my likes: "Ver Todos os Meus Gostos"
+    see my likes: "Ver Todos os Meus Gosto´s"
     successfully deleted: "Nota Removida"
   ref:
     loading secondary: "A Carregar a Referência na Versão Secundária..."
@@ -188,7 +188,7 @@ pt-PT:
     profile form errors: "O(s) seguinte(s) erro(s) impede(m) a actualização do seu perfil:"
     email address: "Endereço de email"
     user name: "Utilizador"
-    agreement: "Eu concordo com o YouVersion %{terms_link}."
+    agreement: "Eu concordo com os %{terms_link} do YouVersion ."
     terms and conditions: "termos e condições"
     facebook sign up success: "Fantástico! Autorizou com o Facebook. Escolha um nome de utilizador YouVersion e palavra-passe para continuar."
     register: "Registar"
@@ -233,8 +233,8 @@ pt-PT:
     user friends: "Amigos de %{user}"
     my bookmarks: "Os Meus Marcadores"
     user bookmarks: "Marcadores de %{user}"
-    my likes: "Os Meus Gostos"
-    user likes: "Gostos de %{user}"
+    my likes: "Os Meus Gosto´s"
+    user likes: "Gosto´s de %{user}"
     my badges: "As Minhas Medalhas"
     revised date: "Última revisão em %{date}"
     update email copy: "Introduza um novo endereço de email e clique em Atualizar Email. Iremos enviar-lhe um link para confirmar o seu novo endereço de email."
@@ -346,7 +346,7 @@ pt-PT:
       postal code: "Código Postal"
       website: "Website "
       country: "País ou Região"
-      timezone: "Fuso horário"
+      timezone: "Fuso Horário"
       language: "Idioma"
       updated: "Sucesso! Atualizou o seu perfil."
       error: "Desculpe, houve um erro a atualizar o seu perfil."
@@ -373,9 +373,9 @@ pt-PT:
     notifications:
       badges: "Notificar-me sobre medalhas que tenha ganho."
       follower: "Notificar-me quando alguém me segue."
-      newsletter: "Manter-me actualizado sobre anúncios YouVersion."
-      note_like: "Notificar-me quando alguém faz gosto às minhas notas."
-      reading_plans: "Notificar-me sobre informação de planos de leitura que comecei."
+      newsletter: "Manter-me atualizado sobre anúncios YouVersion."
+      note_like: "Notificar-me quando alguém faz Gosto às minhas notas."
+      reading_plans: "Notificar-me com informação de planos de leitura que comecei."
       publishing partners: "Atualizem-me com notícias dos parceiros de conteúdo YouVersion."
       update: "Atualizar Notificações"
   bookmarks:
@@ -409,12 +409,12 @@ pt-PT:
   plans:
     title: "Planos de Leitura"
     browse by category: "Navegar por Categoria"
-    browse plans: "Navegar Planos sobre %{category}"
+    browse plans: "Veja Planos na Categoria %{category}"
     swap list localization: "(<a href='%{swap_link}'>Ver em %{swap_locale}</a>)"
     showing language filtered: "A mostrar planos disponíveis apenas em %{lang_name}"
     all: "Todos"
     all plans: "Todos os Planos"
-    all category plans: "Todos os Planos sobre %{category}"
+    all category plans: "Todos os Planos Na Categoria %{category}"
     my plans: "Meus Planos"
     none found: "Não conseguimos encontrar um plano que corresponda aos seus critérios. Tente ampliar os limites da sua pesquisa."
     about publisher: "Sobre o Editor"
@@ -430,7 +430,7 @@ pt-PT:
     month: "Calendário"
     publisher: "Editor"
     success widget title: "Aproveite ao Máximo o seu Plano de Leitura"
-    success blurb: "Planos de Leitura são a melhor forma de tornar a Palavra de Deus parte da nossa vida diária. Porém quase todos nós nos deixamos atrasar um pouco nas leituras. Ouvir o que Deus tem para nos dizer em cada dia é muito importante e por isso partilhamos algumas dicas para o ajudar a manter as leituras em dia."
+    success blurb: "Planos de Leitura são a melhor forma de tornar a Palavra de Deus parte da nossa vida diária. Porém, quase todos nós nos deixamos atrasar um pouco na leitura. Ouvir o que Deus tem para nos dizer em cada dia é muito importante e por isso partilhamos algumas dicas para o ajudar a manter a leitura em dia."
     success blog link title: "Leia a mensagem no Blog"
     a users plans: "Planos de %{username}"
     you have no plans: "Até ao momento não subscreveu nenhum plano de leitura."
@@ -438,7 +438,7 @@ pt-PT:
     filter by lang: "Selecione Planos por Idioma"
     settings: "Definições"
     search: "Procurar"
-    search placeholder: "Procure Planos Sobre %{category}"
+    search placeholder: "Procurar Planos Na Categoria %{category}"
     subscribe to plan: "Iniciar Este Plano"
     previous day: "Dia Anterior"
     next day: "Próximo Dia"
@@ -604,17 +604,17 @@ pt-PT:
     h2: "A Palavra de Deus está consigo."
     h3: "YouVersion é Global"
     h3 sub: "Disponível em mais de 100 idiomas em todo o mundo."
-    main: "Dezenas de milhões de pessoas estão a usar a App da Bíblia&trade; para fazerem da Palavra de Deus uma parte da sua vida. Descarregue a app gratuita e aceda aos seus marcadores, notas, e planos de leitura em qualquer lugar. Desfrute de centenas de versões, incluindo audio, tudo no seu dispositivo móvel."
+    main: "Dezenas de milhões de pessoas estão a usar a App da Bíblia&trade; para fazerem da Palavra de Deus uma parte da sua vida. Transfira a app gratuita e aceda aos seus marcadores, notas, e planos de leitura em qualquer lugar. Desfrute de centenas de versões, incluindo audio, tudo no seu dispositivo móvel."
     button h4: "Aceda a youversion.com/download"
     button h4 sub: "No Seu Dispositivo Móvel"
     download now: "Descarregue a App da Bíblia Agora"
     what people: "O que as pessoas dizem sobre a App gratuita da Bíblia..."
     t1: "Eu tenho sempre a Palavra."
-    t1 copy: "Criei marcadores com as passagens que são importantes para mim. Li inclusive tudo num ano graças aos planos de leitura."
+    t1 copy: "Criei marcadores com as passagens que são importantes para mim. Li inclusive toda a Bíblia num ano, graças aos planos de leitura."
     t2: "Grande programa!"
-    t2 copy: "Esta app ajuda-me na minha organização e na leitura da Palavra de Deus todos os dias. É fácil de usar e oferece múltiplas características ... Adoro-a!"
+    t2 copy: "Esta app ajuda-me a organizar e a ler a Palavra de Deus todos os dias. É fácil de se usar e oferece múltiplas características ... Adoro-a!"
     t3: "App maravilhosa."
-    t3 copy: "Boa app com uma variada seleção de Biblias para escolha. ... As Bíblias em audio são também maravilhosas e de fácil compreensão."
+    t3 copy: "Excelente app com uma variada seleção de Bíblias para escolha. ... As Bíblias em audio são também maravilhosas e de fácil compreensão."
     iphone ipad: "iPhone/iPad"
     android: "Android"
     blackberry: "BlackBerry"
