--- a/config/locales/ta.yml
+++ b/config/locales/ta.yml
@@ -1,7 +1,7 @@
 ta:
   now: "இப்பொழுது"
   celebrating 50MM: "50 மில்லியன் பயன்பாடு நிறுவல்களை கொண்டாடுகிறது!"
-  link: "தொடர்பு"
+  link: "தொடர்பு "
   site search: "YouVersion தேடல்"
   auth error: "மன்னிக்கவும், உங்கள் பயனர்பெயரிலோ   அல்லது கடவுச்சொல்லிலோ ஒரு பிரச்சனை உள்ளது.  தொடர்வதற்கு YouVersion-க்குள் sign in செய்யவும். "
   download: "பதிவிறக்கம்"
@@ -14,7 +14,7 @@ ta:
   created ago: "%{time_ago} முன்பு உருவாக்கப்பட்டது"
   copy: "பகர்ப்பு"
   copy confirmed: "பகர்க்கப்பட்டது!"
-  new note: "ஒரு குறிப்பு உருவாக்க"
+  new note: "ஒரு குறிப்பை உருவாக்குக"
   twitter: "Twitter"
   facebook: "Facebook"
   share success: "உங்கள் செய்தி பகிர்ந்து கொள்ள பட்டிருக்கிறது."
@@ -94,6 +94,7 @@ ta:
   search placeholder: "தேடு..."
   search: "தேடு"
   book: "புத்தகம்"
+  filter book: "புத்தகங்களை வடிகட்டு"
   try the beta: "Beta பதிப்பினை முயற்சிக்கவும்"
   welcome to the beta: "புதிய YouVersion.com க்கு வரவேற்கிறோம்!"
   selected: "தேர்ந்தெடுக்கப்பட்டது"
@@ -120,7 +121,7 @@ ta:
   recent versions: "சமீபத்தில் பயன்படுத்தப்பட்டது"
   likes:
     my likes: "என் விருப்பங்கள்"
-    all likes: "அனைத்து விருப்பங்கள்"
+    all likes: "அனைத்து விருப்பங்களும் "
     none exist blurb: "மன்னிக்கவும், இங்கு விருப்பங்கள் இல்லை!"
     likes: "விருப்பங்கள்"
     like button text: "விரும்பு"
@@ -140,7 +141,7 @@ ta:
     save: "சேமி"
     select from list: "-தேர்ந்தெடு-"
     edit note: "குறிப்பை திருத்துக"
-    all notes: "அனைத்து குறிப்புகள்"
+    all notes: "அனைத்து குறிப்புகளும் "
     community notes: "சமூக குறிப்புகள்"
     new note: "புதிய குறிப்பு"
     status field: "குறிப்புகளின் நிலை:"
@@ -150,7 +151,7 @@ ta:
     write new: "புதிய குறிப்பு எழுதவும்"
     not found: " வேதாகமத்தில் உள்ள வசனம் அல்லது வசனங்களின்   தொகுதியை  வீடியோ, ஆடியோ, படங்கள், உரை, மற்றும் பிற வலைத்தளங்களின் இணைப்புகளை இணைக்க YouVersion உங்களை  அனுமதிக்கிறது.வசனத்தோடு ஈடுபடும்போது   நீங்கள்  என்ன கற்கவும்   நினைக்கவும் செய்கிறீர்கள் என்பதை பகிர்ந்து கொள்வது YouVersion சமூகத்தில் நீங்கள்  பங்கெடுக்கும் ஒரு வழி. பைபிள் ரீடரில்  ஒரு வசனம் (கள்) தேர்வு செய்து உங்கள் குறிப்பு சேர்ப்பதன் மூலம் இப்போது தொடங்குங்கள். அது மிகவும் சுலபம்."
     cancel: "ரத்துசெய்"
-    pop out: "வெளியே குதித்து  வந்தவை  "
+    pop out: "குதித்து  வந்தவை  "
     notes i like: "நான் விரும்பும் குறிப்புகள்"
     none found: "குறிப்புகள் காணவில்லை"
     see my likes: "என் அனைத்து  like-களையும் காண்க"
@@ -166,10 +167,10 @@ ta:
     selected: "தேர்ந்தெடுக்கபட்டது"
     preferences: "விருப்பத்தேர்வுகள்"
     listen: "கேளுங்கள்"
-    parallel: "இணையானது"
+    parallel: "இணை வேதாகமம்"
     full screen: "முழு திரை"
     about the version: "%{version} பற்றி"
-    settings: "படிப்பவரின் அமைவுகள்"
+    settings: "வாசிப்பவரின் அமைவுகள்"
     invalid chapter title: "இந்த பதிப்பினை பற்றி "
     invalid chapter text: "இந்த அத்தியாயம் இந்த பதிப்பில் இல்லை."
     invalid secondary chapter text: "நீங்கள் விரும்பும் இரண்டாம் நிலை பதிப்புக்கு இந்த அத்தியாயம் இல்லை."
@@ -630,20 +631,23 @@ ta:
       our action: "இது பற்றிய  அறிவிப்பு எங்களுக்கு கிடைத்து விட்டது, கூடிய சீக்கிரம் அதனை கவனிப்போம். "
   shared:
     menu_settings:
-      title: "உங்கள் அமைவுகள்"
+      title: "வாசிப்பவரின் அமைவுகள்"
       close: "மூடவும்  "
       font: "எழுத்துரு"
       font1: "Helvetica"
       font2: "Georgia"
       font3: "Baskerville"
       font4: "Verdana"
-      font size: "அளவு:"
+      font size: "எழுத்துரு அளவு:"
       small: "சிறியது"
       medium: "நடுத்தரம்"
       large: "பெரியது"
       highlights: "சிறப்புக்கூறுகள்:"
       'on': "On"
       'off': "Off"
+      extras: "உதிரிகள்"
+      translation notes: "அடிக்குறிப்புகள்"
+      cross references: "தொடர்புக் குறிப்புகள்"
   app errors:
     404 explanation: "நீங்கள் <a href='%{reader_path}'> home page</ a> மீண்டும் தொடங்க  முயற்சி செய்யலாம் . இப்பொழுதும் சிக்கல் உள்ளதா? எங்கள் <a href='%{support_url}'> உதவி குழு </ a> தொடர்பு கொள்க."
     404 message: "மன்னிக்கவும், நீங்கள் தேடும் பக்கம் இல்லை."
@@ -651,6 +655,7 @@ ta:
     408 explanation: "நாம் எச்சரிக்கை செய்யப்பட்டிருப்பதால் நிலைநிற்கிற எந்த பிரச்சினைகளையும் கூடிய சீக்கிரம் கவனிக்க படும்.வேண்டும். மீண்டும் பைபிள் வாசிப்பிற்கு உங்களை எடுத்து செல்ல முடியுமா என்று பார்க்கலாம்! "
     try again: "மீண்டும் முயற்சிக்கவும்"
   versions:
+    filter: "பதிப்புகளை வடிகட்டு"
     courtesy of: "%{abbreviation}  உங்களுக்கு கொண்டுவருவது %{publisher}"
     learn more: "மேலும் அறிய"
     index title: "கிடைக்கக்கூடிய பதிப்புகள்"
