--- a/config/locales/tl.yml
+++ b/config/locales/tl.yml
@@ -94,6 +94,7 @@ tl:
   search placeholder: "Maghanap..."
   search: "Hanapin"
   book: "Aklat"
+  filter book: "Salain ang mga Aklat"
   try the beta: "Subukan ang Beta"
   welcome to the beta: "Tuloy po sa bagong Youversion.com!"
   selected: "Napili"
@@ -223,7 +224,7 @@ tl:
     no devices: "Walang mga gamit na nakakonekta sa iyong YouVersion Account"
     no devices download copy: "Base sa online na Bibliya, YouVersion.com, ang Bible App ay isang libreng Bibliya na maaaring ma-install sa kahit anong mobile na gamit. Pinahihintulotan ng Bible App ang mga manggagamit na magbasa ng Bibliya, makibahagi ng mga berso sa kanilang mga social network, i-bookmark ang mga paboritong talata, at iba pa&mdash; lahat sa format na akma sa kanilang mobile na kabuhayan.  Bumisita sa <a href='http://www.youversion.com/download'>youversion.com/download</a> mula sa iyong mobile na kagamitan para i-download ang Bible App at kumonekta sa iyong account!"
     yes delete: "Oo, Burahin ang Aking Account"
-    account delete success: "Ang iyong YouVersion account ay matagumpay nang naalis. Umaasa kaming magkaroon ka ng makabuluhang paraan upang makapag-interact gamit ang Bibliya. Ilan sa mga apps na ito ay maaaring makatulong sa iyong pag-usad: <a href=http://www.youversion.com/free-bible-apps>http://www.youversion.com/free-bible-apps</a>"
+    account delete success: "Ang iyong YouVersion account ay matagumpay nang naalis. Umaasa kaming magkaroon ka ng makabuluhang paraan upang makaniig ang Bibliya. Ilan sa apps na ito ay maaaring makatulong sa iyong pag-usad: <a href=http://www.youversion.com/free-bible-apps>http://www.youversion.com/free-bible-apps</a>"
     delete account description: "Pag buburahin mo ang iyong account, permanente mong maaalis ang lahat ng impormasyon, kasaysayan, at gawain (tulad ng mga tala, bookmarks, highlights, atpb.) na napapaloob sa YouVersion.com at Bible App. Ang aksiyong ito ay hindi mo na maibabalik o ng aming team. Kung sigurado ka na, ipagpatuloy sa ibaba."
     user recent activity: "Mga Huling Aktibidad ni %{user}"
     user notes: "Mga Tala ni %{user}"
@@ -538,8 +539,8 @@ tl:
     card exp date: "Petsa ng Expiration (MMYY)"
     receipt: "I-email ako ng kopya ng resibo."
     preview: "I-preview ang Donasyon"
-    header copy: "Sama-sama, maaari tayong maging pinakanakibahagi sa Bibliya na henerasyon sa kasaysayan.  Ang iyong suporta ay magreresulta sa mga taong makakapag-bukas ng Salita ng Diyos sa mas maraming plataporma, mas maraming wika, mas maraming bersyon, at sa mas marami pang bansa. Punan ang form sa ibaba para magbigay donasyon. Aming kokolektahin ang impormasyon ukol sa pagbayad sa susunod na screen.  Kami ay tumatanggap ng Visa o Mastercard."
-    header confirm copy: "Sama-sama, maaari tayong maging pinakanakibahagi sa Bibliya na henerasyon sa kasaysayan.  Ang iyong suporta ay magreresulta sa mga taong makakapag-bukas ng Salita ng Diyos sa mas maraming plataporma, mas maraming wika, mas maraming bersyon, at sa mas marami pang bansa. I-click ang Magbigay Donasyon Ngayon para sa iyong donasyon. "
+    header copy: "Sama-sama, maaari tayo ang maging henerasyon na pinaka-nakibahagi sa Bibliya.  Ang iyong suporta ay magbibigay daan upang mas maraming tao pa ang makapag-bukas ng Salita ng Diyos sa mas maraming kagamitan, mas maraming wika, mas maraming bersyon, at sa mas marami pang bansa. Punan ang form sa ibaba para magbigay ng donasyon. Aming kokolektahin ang impormasyon ukol sa pagbayad sa susunod na screen. "
+    header confirm copy: "Sama-sama, maaari tayong maging henerasyon na pinaka-nakibahagi sa Bibliya.  Ang iyong suporta ay magbibigay daan upang mas maraming tao pa ang makapag-bukas ng Salita ng Diyos sa mas maraming kagamitan, mas maraming wika, mas maraming bersyon, at sa mas marami pang bansa. I-click ang Magbigay Donasyon Ngayon para magbigay. "
     donate now button: "Magbigay Donasyon Ngayon "
     email header: "Natanggap ng YouVersion, isang ministeryo ng LifeChurch.tv, ang iyong donasyon. Walang kalakal o serbisyo ang ibinigay kapalit ng donasyon, maliban sa di mahipong relihiyosong pakinabang. Maaaring i-contact ang giving@lifechurch.tv sa mga katanungan. "
     email footer: "Ang iyong donasyon ay makakatulong sa mga tao sa buong mundo na umibig sa Salita ng Diyos. "
@@ -637,11 +638,11 @@ tl:
       font2: "Georgia"
       font3: "Baskerville"
       font4: "Verdana"
-      font size: "Sukat:"
+      font size: "Sukat ng Titik:"
       small: "Maliit"
       medium: "Medium"
       large: "Malaki"
-      highlights: "Highlights:"
+      highlights: "Highlights"
       'on': "On"
       'off': "Off"
       extras: "Higit pa:"
@@ -654,6 +655,7 @@ tl:
     408 explanation: "Kami ay naalerto na at tutugunan ang paulit-ulit na mga problema sa lalong madaling panahon.  Tingnan natin kung maibabalik ka namin sa iyong pagbasa ng Bibliya!"
     try again: "Subukang Muli"
   versions:
+    filter: "Salain ang mga Salin"
     courtesy of: "%{abbreviation} mula sa %{publisher}"
     learn more: "Higit na Impormasyon"
     index title: "Mga Maaaring Gamiting Salin"
