--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -94,7 +94,7 @@ zh-CN:
   search placeholder: "搜索..."
   search: "搜索"
   book: "书卷"
-  filter book: "筛选书卷"
+  filter book: "筛选书卷..."
   try the beta: "尝试测试版"
   welcome to the beta: "欢迎来到新版 YouVersion.com 网站！"
   selected: "已选的"
@@ -110,7 +110,7 @@ zh-CN:
   next page: "后一页"
   previous page: "前一页"
   invalid username or password: "无效的用户名或密码。"
-  show all bookmarks: "显示所有的 %{total} 书签"
+  show all bookmarks: "显示所有的 %{total} 个书签"
   show all notes: "显示全部 %{total} 笔记"
   recent bookmarks: "最近的书签"
   percentage display: "%{number}%"
@@ -227,7 +227,7 @@ zh-CN:
     account delete success: "您的 YouVersion 账户已经成功删除。我们希望您能继续寻找更有意义的与圣经互动的方式。这些软件或许对您有帮助，请前往：<a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "如果您删除账户，您将彻底删除您在 YouVersion 网站和圣经软件上的个人信息、历史记录和专属信息（比如笔记、书签、高亮显示的内容等）。这个行为一旦实施，您或者我们都不能恢复。如果您确定想删除账户，请根据下面提示继续。"
     user recent activity: "%{user} 最近的活动"
-    user notes: "%{user}的笔记"
+    user notes: "%{user} 的笔记"
     my friends: "我的好友"
     my notes: "我的笔记"
     user friends: "%{user}的好友"
@@ -262,12 +262,12 @@ zh-CN:
     resend confirmation button: "重发确认邮件"
     privacy:
       policy: "%{youversion} 隐私政策"
-      intro: "YouVersion，作为LifeChurch.tv 拥有并运营的网站和应用软件，知道您关心自己的信息是如何被使用和分享的。我们希望以下的说明能够帮助您理解YouVersion 将如何收集，使用和保护您向我们提供的信息。"
+      intro: "YouVersion，作为 LifeChurch.tv 拥有并运营的网站和应用软件，知道您关心自己的信息是如何被使用和分享的。我们希望以下的说明能够帮助您理解YouVersion 将如何收集，使用和保护您向我们提供的信息。"
       translation disclaimer: "隐私政策是为了方便您查阅而翻译，LifeChurch.tv 对于翻译的准确性不做任何承诺或保证。如果英文和译文不一致，应以英文为准。"
       what we collect: "我们收集的信息及其用途"
       your information title: "您提供的信息"
       your information text: "当您注册 YouVersion  账户或者其他 LifeChurch.tv 的服务或任何需要注册的活动的时候，我们会向您询问您的个人资料（包括您的姓名，邮件地址和一个帐户密码）。我们会把您申请帐户时提交的资料与 LifeChurch.tv 其他服务项目或者第三方所提供的信息合并，以便我们能够向您提供更好的服务并提高我们服务的质量。对于某些服务，我们会允许您决定是否合并这些信息。"
-      device id title: "唯一设备身份和GPS位置"
+      device id title: "唯一设备身份和 GPS 位置"
       device id text: "当您使用 YouVersion 圣经软件时，我们可以获取您的唯一设备身份(“UDID”)，IP 地址和/或 GPS 位置。通过这些信息，我们可以为您提供量身定做的服务。获取这些信息是为了统计使用我们的服务或部分服务的设备总数，跟踪使用总量，分析数据，以及更有效地与您沟通。我们可以把这些信息和第三方信息结合起来，让您获得更佳体验，提升我们的服务。我们不会与第三方共享与您的 UDID 或 GPS 位置相关的个人信息。"
       cookies title: "Lifechurch.tv 网站的 cookies"
       cookies text: "当您访问 <a href='www.youversion.com'>www.youversion.com</a>时，我们可以发送一个或多个 Cookie 到您的电脑，这样我们就能识别您的浏览器。(Cookie 就是一个很小的文本文件，其中包含一串字符) 接受我们的 Cookie 使浏览器可以在您下次打开我们的网页时记录您的使用偏好。虽然大多数浏览器默认接受 Cookie，但您可以设置浏览器拒绝所有 Cookie，或提醒您正在接收 Cookie。如果您关闭了 Cookie 的接收，YouVersion 的部分功能或服务将无法正常生效。"
@@ -655,7 +655,7 @@ zh-CN:
     408 explanation: "我们已经接到警示并将尽快解决一切持续存在的问题。 希望您能尽快返回到圣经的阅读中！"
     try again: "再试一次"
   versions:
-    filter: "筛选版本"
+    filter: "筛选版本..."
     courtesy of: "%{abbreviation}是由 %{publisher}提供"
     learn more: "获取更多信息"
     index title: "可用的版本"
