--- a/config/locales/sq.yml
+++ b/config/locales/sq.yml
@@ -94,6 +94,7 @@ sq:
   search placeholder: "Kërko..."
   search: "Kërko"
   book: "Libri"
+  filter book: "Filtro librat..."
   try the beta: "Provoni versionin Beta"
   welcome to the beta: "Mirë se vini te YouVersion.com i ri!"
   selected: "I përzgjedhur"
@@ -654,6 +655,7 @@ sq:
     408 explanation: "Ne jemi vënë në dijeni dhe do të merremi me çdo problem të vazhdueshëm sa më shpejt që të jetë e mundur. Të shohim nëse mund t'ju kthejmë te leximi i Biblës!"
     try again: "Provoni sërish"
   versions:
+    filter: "Filtro versionet..."
     courtesy of: "%{abbreviation} është sjellë te ju nga %{publisher}"
     learn more: "Mëso më shumë"
     index title: "Versione të disponueshme"
