simplified press image packages, new CNN article

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -596,12 +596,7 @@ en:
       logos:                                    "YouVersion Logos Pack"
       icons:                                    "Bible App Icons"
       infographic:                              "Infographic: Bible App Stats and Usage"
-      iphone:                                   "Image Collection: iPhone"
-      ipad:                                     "Image Collection: iPad"
-      android:                                  "Image Collection: Android"
-      blackberry:                               "Image Collection: BlackBerry"
-      win phone 7:                              "Image Collection: Windows Phone 7"
-      windows 8:                                "Image Collection: Windows 8"
+      devices:                                  "Image Collection: Devices"
       lifestyle:                                "Image Collection: Lifestyle"
       screencast:                               "YouVersion Screencast"
     links title:                                "Media Coverage Links"
